name: crowdmatch
version: 0.2.0.0
synopsis: Crowdmatch mechanism for Snowdrift.coop
description:
    Provides an interface for managing pledges and donations. Includes
    utilities for instigating a crowdmatch event and for sending
    transactions via Stripe (or other transaction partners).
homepage: https://snowdrift.coop
license: AGPL-3
license-file: LICENSE
author: Bryan Richter
maintainer: discuss@lists.snowdrift.coop
copyright: Bryan Richter and Snowdrift.coop, 2016, 2017
category: Database
build-type: Simple
-- extra-source-files:
cabal-version: >=1.20

-- library {{{1
library
    exposed-modules:
        Crowdmatch
        Crowdmatch.Model
        Crowdmatch.ModelDataTypes
        Crowdmatch.Skeleton
    -- other-modules:
    -- other-extensions:
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.8 && <5.0
        , bytestring >= 0.10.6.0
        , errors
        , lens
        , esqueleto
        , persistent
        , persistent-template
        , postgresql-simple
        , postgresql-simple-migration
        , stripe-core
        , stripe-haskell
        , text
        , time
        , transformers

-- test-suite test {{{1
test-suite test
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    build-depends:
        base
        , bytestring
        , crowdmatch
        , directory
        , hspec
        , lens
        , mtl
        , persistent
        , persistent-postgresql
        , postgresql-simple
        , QuickCheck
        , run-persist
        , safe-exceptions
        , stripe-core
        , text
        , time
        , transformers

-- executable make-payments {{{1
executable make-payments
    main-is: MakePaymentsMain.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base
        , bytestring
        , crowdmatch
        , run-persist
        , stripe-core
        , stripe-haskell
    other-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        RecordWildCards
        GeneralizedNewtypeDeriving
        FlexibleContexts
        TupleSections
        LambdaCase

-- executable crowdmatch {{{1
executable crowdmatch
    main-is: CrowdmatchMain.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base
        , run-persist
        , crowdmatch

-- -- }}}1
-- vim: fdm=marker :
