name:                scripts
version:             0.1.0.0

synopsis:            Fake package to enable definition lookup in Haskell scripts.
homepage:            snowdrift.coop, git.snowdrift.coop/sd/snowdrift
license:             BSD3
license-file:        ../LICENSE.md
author:              Jake Thomas

-- Please visit the below URL for currently available means of contact.
-- You'll likely use the IRC channel or dev@lists.snowdrift.coop.
-- But it's possible we'll get something more sophisticted set up, so please
-- give the URL a whirl.
maintainer:          See snowdrift.coop/contact.

-- Because this "package" exists purely for getting dependencies (for definition
-- lookup), "Distribution" is the appropriate category; that's where packages
-- for the sake of packages go.
category:            Distribution

-- There is no building. Can't get simpler.
build-type:          Simple

extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation, it is
-- common to point users to the README.md file.
description:         Please see ./README.md.

library

  -- Again, this is a fake package, there is no building.
  -- We simply list Haskell script dependencies here so that the command
  -- "stack list-dependencies" will recursively list our scripts' dependencies.
  -- We use that functionality in unpack.sh, which gathers the whole project's
  -- Haskell dependencies, whether for compilation or not, so that we have
  -- all definitions of Haskell identifiers used in this project available to
  -- us.
  -- Recall that Haskell scripts are _not_ compiled, but interpreted. So our
  -- main stack.yaml and cabal files do not list Haskell script depencies.
  -- Thus this fake package.
  build-depends:
    base >= 4.7 && < 5
    -- The below 4 packages are required by sdb.hs.

    -- Turtle requires "text" to be less than 1.3.
    , text < 1.3

    -- sdb.hs does not give a version constraint on shake.
    , shake

    -- Likewise, it does not give one on turtle, either.
    , turtle

    -- Turtle imposes the version constraints seen below on system-filepath:
    , system-filepath >=0.3.1 && <0.5
  default-language:    Haskell2010
