name:          Snowdrift
version:       0.1.4
cabal-version: >= 1.22
build-type:    Simple
license:       AGPL-3
license-file:  ../LICENSE.md
author:        Snowdrift.coop
maintainer:    dev@lists.snowdrift.coop
synopsis:      Infrastructure for the Snowdrift.coop fundraising site.
category:      Web
stability:     Experimental
build-type:    Simple
homepage:      https://snowdrift.coop
bug-reports:   https://tree.taiga.io/project/snowdrift/issues

source-repository head
  type:     git
  location: https://git.snowdrift.coop/sd/snowdrift.git

Flag dev
    Description: Turn on development settings, like auto-reload templates.
    Default:     False

Flag library-only
    Description: Build for use with "yesod devel"
    Default:     False

-- library {{{1
library
    hs-source-dirs: src, app

    -- exposed-modules {{{2
    exposed-modules:
        Alerts
        AppDataTypes
        AuthSite
        Avatar
        Application
        Css
        Email
        Foundation
        Import
        Import.NoFoundation
        Model
        ModelDataTypes
        Settings
        Settings.StaticFiles
        Handler
        Handler.Dashboard
        Handler.PaymentInfo
        Handler.Project
        Handler.TH
        Handler.Util
        TestHooks
    -- }}}2

    -- other-modules {{{2
    other-modules:
        AuthSiteDataTypes
    -- }}}2

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT

    default-extensions:
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        FlexibleContexts
        MultiParamTypeClasses
        NoImplicitPrelude
        OverloadedStrings
        QuasiQuotes
        RecordWildCards
        ScopedTypeVariables
        TemplateHaskell
        TypeFamilies
        ViewPatterns

    -- build-depends {{{2
    build-depends:
        base                     >= 4       && < 5
        , aeson                  >= 0.6     && < 0.12
        , blaze-html
        , bytestring             >= 0.9     && < 0.11
        , classy-prelude         >= 0.10.2
        , classy-prelude-yesod   >= 0.10.2
        , errors
        , fast-logger            >= 2.2     && < 2.5
        , file-embed
        , hjsmin                 >= 0.1
        , http-client
        , lens
        , libravatar
        , mime-mail
        , monad-logger           >= 0.3     && < 0.4
        , nonce
        , persistent             >= 2.0     && < 2.3
        , persistent-postgresql  >= 2.1.1   && < 2.3
        , persistent-template    >= 2.0     && < 2.3
        , pwstore-fast
        , shakespeare            >= 2.0     && < 2.1
        , stripe-haskell
        , stripe-core
        , template-haskell
        , text                   >= 0.11    && < 2.0
        , time
        , titlecase
        , unordered-containers
        , wai
        , wai-extra              >= 3.0     && < 3.1
        , warp                   >= 3.0     && < 3.3
        , yaml                   >= 0.8     && < 0.9
        , yesod                  >= 1.4.1   && < 1.5
        , yesod-core             >= 1.4.17  && < 1.5
        , yesod-gitrev
        , yesod-static           >= 1.4.0.3 && < 1.6
    -- }}}2

    default-language: Haskell2010

-- executable Snowdrift {{{1
executable Snowdrift
    if flag(library-only)
        Buildable: False

    main-is:        main.hs
    hs-source-dirs: app
    build-depends:  base, Snowdrift

    ghc-options: -threaded -rtsopts -with-rtsopts=-N

    default-language: Haskell2010

-- test-suite test {{{1
test-suite test
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: test
    ghc-options:    -Wall

    other-modules:
        HandlerSpec
        AuthSiteSpec
        AlertsSpec
        SampleSpec
        Factories
        TestImport
        StripeMock

    default-extensions:
        FlexibleContexts
        NoImplicitPrelude
        OverloadedStrings
        QuasiQuotes
        RecordWildCards
        TemplateHaskell

    -- build-depends {{{2
    build-depends:
        Snowdrift
        -- For htmlHasLink (should move upstream)
        , HUnit >= 1.3.1.1
        , base
        , classy-prelude
        , classy-prelude-yesod
        , hspec >= 2.0.0
        , http-types
        , persistent
        , shakespeare
        , stripe-core
        , stripe-haskell
        , text >= 1.2.2.1
        , wai-extra
        , yesod
        , yesod-core
        , yesod-test >= 1.5.0.1 && < 1.6
    -- }}}2

    default-language: Haskell2010
-- }}}1

-- vim: fdm=marker :
