name:          Snowdrift
version:       0.1.4
cabal-version: >= 1.22
build-type:    Simple
license:       AGPL-3
license-file:  ../LICENSE.md
author:        Snowdrift.coop
maintainer:    dev@lists.snowdrift.coop
synopsis:      Infrastructure for the Snowdrift.coop fundraising site.
category:      Web
stability:     Experimental
build-type:    Simple
homepage:      https://snowdrift.coop
bug-reports:   https://tree.taiga.io/project/snowdrift/issues

source-repository head
  type:     git
  location: https://git.snowdrift.coop/sd/snowdrift.git

Flag dev
    Description: Turn on development settings, like auto-reload templates.
    Default:     False

Flag library-only
    Description: Build for use with "yesod devel"
    Default:     False

-- library {{{1
library
    hs-source-dirs: src

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT

    -- exposed-modules {{{2
    exposed-modules:
        Alerts
        AppDataTypes
        AuthSite
        Avatar
        Application
        Css
        Discourse
        Email
        Foundation
        Import
        Import.NoFoundation
        Model
        Settings
        Settings.StaticFiles
        Handler
        Handler.Dashboard
        Handler.Discourse
        Handler.PaymentInfo
        Handler.Pledge
        Handler.Project
        Handler.TH
        Handler.Util
        TestHooks
    -- }}}2

    -- other-modules {{{2
    other-modules:
        AuthSiteDataTypes
        MarkupInstances
    -- }}}2

    -- build-depends {{{2
    build-depends:
        base                     >= 4       && < 5
        -- Snowdrift libs
        , crowdmatch
        -- Other
        , aeson                  >= 0.6     && < 0.12
        , base64-bytestring
        , blaze-html
        , bytestring             >= 0.9     && < 0.11
        , classy-prelude         >= 0.10.2
        , classy-prelude-yesod   >= 0.10.2
        , cryptonite
        , data-default
        , errors
        , esqueleto
        , fast-logger            >= 2.2     && < 2.5
        , file-embed
        , formattable
        , hjsmin                 >= 0.1
        , http-client
        , http-types
        , lens
        , libravatar
        , memory
        , mime-mail
        , monad-logger           >= 0.3     && < 0.4
        , nonce
        , persistent
        , persistent-postgresql
        , persistent-template
        , postgresql-simple
        , pwstore-fast
        , shakespeare            >= 2.0     && < 2.1
        , stripe-haskell
        , stripe-core
        , template-haskell
        , text                   >= 0.11    && < 2.0
        , time
        , titlecase
        , transformers
        , unordered-containers
        , wai
        , wai-extra              >= 3.0     && < 3.1
        , warp                   >= 3.0     && < 3.3
        , yaml                   >= 0.8     && < 0.9
        , yesod                  >= 1.4.1   && < 1.5
        , yesod-core             >= 1.4.17  && < 1.5
        , yesod-gitrev
        , yesod-static           >= 1.4.0.3 && < 1.6
    -- }}}2

    default-extensions:
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        FlexibleContexts
        MultiParamTypeClasses
        NoImplicitPrelude
        OverloadedStrings
        QuasiQuotes
        RecordWildCards
        ScopedTypeVariables
        TemplateHaskell
        TupleSections
        TypeFamilies
        ViewPatterns

    default-language: Haskell2010

-- executable Snowdrift {{{1
executable Snowdrift
    if flag(library-only)
        Buildable: False

    main-is:        main.hs
    hs-source-dirs: app
    build-depends:  base, Snowdrift

    ghc-options: -threaded -rtsopts -with-rtsopts=-N

    default-language: Haskell2010

-- test-suite test {{{1
test-suite test
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: test
    ghc-options:    -Wall

    other-modules:
        AuthSiteSpec
        AlertsSpec
        DiscourseSpec
        Factories
        HandlerSpec
        SampleSpec
        StripeMock
        TestImport

    default-extensions:
        FlexibleContexts
        NoImplicitPrelude
        OverloadedStrings
        QuasiQuotes
        RecordWildCards
        TemplateHaskell
        ViewPatterns

    -- build-depends {{{2
    build-depends:
        Snowdrift
        -- For htmlHasLink (should move upstream)
        , HUnit >= 1.3.1.1
        , base
        , bytestring
        , classy-prelude
        , classy-prelude-yesod
        , cryptonite
        , hspec >= 2.0.0
        , http-types
        , memory
        , persistent
        , persistent-postgresql
        , postgresql-simple
        , QuickCheck
        , quickcheck-text
        , shakespeare
        , stripe-core
        , stripe-haskell
        , text >= 1.2.2.1
        , wai-extra
        , yesod
        , yesod-core
        , yesod-test >= 1.5.0.1 && < 1.6
    -- }}}2

    default-language: Haskell2010
-- }}}1

-- vim: fdm=marker :
